fixed spacing, removed comma in img padding, removed first margin styles in .availability.

--- a/quiz.css
+++ b/quiz.css
@@ -24,7 +24,7 @@ h1 {
 img {
 	display: block;
 	margin: auto;
-	padding:0 0 20px, 0;
+	padding:0 0 20px 0;
 	max-width: 80%;
 	max-height: 50%;
 }
@@ -35,7 +35,6 @@ img {
 }
 
 .availability {
-	margin: 10px 5px;
 	background-color: darkgrey;
 	color: yellow;
 	width: 100%;
@@ -49,18 +48,10 @@ img {
 	font-weight: bold;
 	font-size: .8rem;
 	line-height: 10%;
-
 }
 
 .dates-valid {
 	padding: 10px 0;
 }
-
-
-
-
-
-
-
 
 
